--- a/index.html
+++ b/index.html
@@ -15,15 +15,15 @@
     />
   </head>
   <body>
-    <h1>Vercel HTML Starter</h1>
+    <h1>Maliek.co.za</h1>
     <p>
       This template is a simple, but powerful single
       <code>index.html</code> file deployed to
-      <a href="https://vercel.com">Vercel</a>. When your site is deployed, all
+      <a href="https://maliek.co.za">Vercel</a>. When your site is deployed, all
       static assets (like HTML, JavaScript, CSS, images, and more) are deployed
       globally to every
       <a href="https://vercel.com/docs/concepts/edge-network/overview"
-        >Vercel Edge Network</a
+        >Edge Network</a
       >
       region.
     </p>
