--- a/index.html
+++ b/index.html
@@ -8,22 +8,22 @@
       rel="stylesheet"
       href="https://cdn.jsdelivr.net/npm/@exampledev/new.css@1.1.2/new.min.css"
     />
-    <title>Vercel HTML Starter</title>
+    <title>Maliek Galant</title>
     <meta
       name="description"
       content="High-performance HTML based website template."
     />
   </head>
   <body>
-    <h1>Maliek.co.za</h1>
+    <h1>Maliek</h1>
     <p>
       This template is a simple, but powerful single
       <code>index.html</code> file deployed to
-      <a href="https://maliek.co.za">Vercel</a>. When your site is deployed, all
+      <a href="https://www.maliek.co.za">Vercel</a>. When your site is deployed, all
       static assets (like HTML, JavaScript, CSS, images, and more) are deployed
       globally to every
       <a href="https://vercel.com/docs/concepts/edge-network/overview"
-        >Edge Network</a
+        >Network</a
       >
       region.
     </p>
@@ -38,7 +38,7 @@
       Learn more about
       <a href="https://vercel.com/analytics">Vercel Analytics</a>.
     </p>
-    <h2>Integrated with git</h2>
+    <h2>Integrated Ads</h2>
     <p>
       Deploying updates to your site is as simple as
       <code>git push</code> thanks to Vercel's advanced
@@ -88,8 +88,8 @@ x-dns-prefetch-control: on
 x-frame-options: DENY</code></pre>
     <p>
       Learn more about
-      <a href="https://vercel.com/docs/concepts/functions/edge-middleware"
-        >Vercel Edge Middleware</a
+      <a href="https://www.maliek.co.za/privacy/"
+        >Privacy Policy</a
       >.
     </p>
   </body>
