--- a/index.html
+++ b/index.html
@@ -33,8 +33,7 @@
       first-party, privacy-friendly traffic analytics for your HTML site. This
       template is already configured using the following script:
     </p>
-    <pre><code>&lt;script defer src="/_vercel/insights/script.js"&gt;&lt;/script&gt;</code></pre>
-    <p>
+     <p>
       Learn more about
       <a href="https://vercel.com/analytics">Vercel Analytics</a>.
     </p>
@@ -70,7 +69,7 @@
       While you can use <code>vercel.json</code> to define these through JSON,
       you can also express your routing configuration as code using
       <a href="https://vercel.com/docs/concepts/functions/edge-middleware"
-        >Vercel Edge Middleware</a
+        >Vercel Middleware</a
       >.
     </p>
     <p>
