--- a/index.html
+++ b/index.html
@@ -4,14 +4,15 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <script defer src="/_vercel/insights/script.js"></script>
+    
     <link
       rel="stylesheet"
       href="https://cdn.jsdelivr.net/npm/@exampledev/new.css@1.1.2/new.min.css"
     />
-    <title>Maliek Galant</title>
+    <title>Maliek</title>
     <meta
       name="description"
-      content="High-performance HTML based website template."
+      content="Maliek Galant Blog."
     />
   </head>
   <body>
@@ -238,7 +239,7 @@
       While you can use <code>vercel.json</code> to define these through JSON,
       you can also express your routing configuration as code using
       <a href="https://vercel.com/docs/concepts/functions/edge-middleware"
-        >Vercel Middleware</a
+        >Middleware</a
       >.
     </p>
     <p>
@@ -249,16 +250,6 @@
       example, this template uses <code>middleware.js</code> defined in the root
       of the repository to add additional security headers to the site:
     </p>
-    <pre><code>referrer-policy: origin-when-cross-origin
-strict-transport-security: max-age=31536000; includeSubDomains; preload
-x-content-type-options: nosniff
-x-dns-prefetch-control: on
-x-frame-options: DENY</code></pre>
-    <p>
-      Learn more about
-      <a href="https://www.maliek.co.za/privacy/"
-        >Privacy Policy</a
-      >.
-    </p>
+    
   </body>
 </html>
