--- a/index.html
+++ b/index.html
@@ -17,6 +17,11 @@
   </head>
   <body>
     <h1>Maliek</h1>
+    <iframe id="frame" style='width: 580px;border:1px solid silver;height:auto;'
+            src="https://secure.instaforex.com/partner_open_account.aspx?lang=en&x=REGBS&width=580&showlogo=false&color=red&host=https://www.maliek.co.za" style="padding:0; margin:0" scrolling="no" onload="var th=this; setTimeout(function() {var h=null;if (!h) if (location.hash.match(/^#h(\d+)/)) h=RegExp.$1;if (h) th.style
+            .height=parseInt(h)+170+'px';}, 10);"
+            ></iframe>
+        
    
     
 <p>Last updated: May 28, 2023</p>
