--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
   </head>
   <body>
     <h1>Maliek Ad</h1>
-    
+<div class="ezoic-basic-ad" style="width:100px;height:50px"></div>  
 <!-- Ezoic - top_of_page - top_of_page -->
 <div id="ezoic-pub-ad-placeholder-165"> </div>
 <!-- End Ezoic - top_of_page - top_of_page -->
